Fix image gap

--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,11 @@ html {
 section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  /* margin: 0;
-  padding: 0; */
 }
 
 img {
   width: 100%;
-  /* margin: 0;
-  padding: 0; */
+  display: block;
 }
 
 .hover-box {
